@@ -1,6 +1,8 @@
 Revision history for App-Pocoirc
 
 {{$NEXT}}
+    - Allow using a short name (e.g. Qnet::State) with --class
+    - Fix error in documentation about the default component class
 
 0.34  Fri Dec 3 06:51:23 GMT 2010
     - Convert library directories (--lib) into absolute paths, so they'll still
